remove skeleton and framework-packaged, add sample-app-deps, sample-app cleanup