@@ -16,17 +16,12 @@
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</pluginRepository>
 	</pluginRepositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.github.ruediste.rise</groupId>
-			<artifactId>framework</artifactId>
+			<artifactId>sample-app-deps</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -34,46 +29,14 @@
 			<version>4.3.5.Final</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<configuration>
-					<executable>java</executable>
-					<arguments>
-						<argument>-Xms512m</argument>
-						<argument>-Xmx512m</argument>
-						<argument>-XX:NewRatio=3</argument>
-						<argument>-XX:+PrintGCTimeStamps</argument>
-						<argument>-XX:+PrintGCDetails</argument>
-						<argument>-Xloggc:gc.log</argument>
-						<argument>-classpath</argument>
-						<classpath />
-						<argument>com.github.ruediste.rise.sample.front.SampleMain</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-					<source>1.8</source>
-					<target>1.8</target>
-					<annotationProcessors>
-						<annotationProcessor>
-							org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor
-						</annotationProcessor>
-					</annotationProcessors>
-					<compilerArgument>-parameters</compilerArgument>
-					<testCompilerArgument>-parameters</testCompilerArgument>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>com.github.ruediste.i18n</groupId>
 				<artifactId>i18n-maven-plugin</artifactId>
